# solana-dex-frontend

./: .gitignore  .mocharc.json  Anchor.toml  Cargo.toml  decodeKey.js  package-lock.json  package.json  server.js  testServer.js  tsconfig.json  vercel.json
programs/my_dex_project/: Cargo.toml
programs/my_dex_project/src/: lib.rs  random.rs  token.rs
programs/yield_farm/: Cargo.toml
programs/yield_farm/src/: lib.rs
services/: tokenService.js
solana-dex-frontend/: .babelrc  .gitignore  =2.8.0  config-overrides.js  package-lock.json
solana-dex-frontend/public/: index.html
solana-dex-frontend/src/: App.js  WalletProvider.js  chartSetup.js  config.js  fetchChartData.js  fetchTokenMetadata.js  firebase.js  i18n.js  index.js
solana-dex-frontend/src/components/: APIIntegration.js  AdvancedAnalytics.js  AdvancedChart.js  Alerts.js  AmountInput.js  AnalyticsDashboard.js  AssetList.js  Auth.js  Backtest.js  BalanceChecker.js  Chart.js  Chat.js  ConditionalOrder.js  CryptoChart.js  CustomizableDashboard.js  DCA.js  DraggableDashboard.css  DraggableDashboard.js  Dropdown.js  Ecosystem.js  ErrorBoundary.js  ExampleChart.js  Footer.js  GamingPage.js  Header.js  HelpCenter.js  HelpTooltip.js  InteractiveTutorials.js  LanguageSelector.js  LendingPage.js  LimitOrder.js  LiquidityPage.js  LiquidityPools.js  MarketOverview.js  MusicPage.js  News.js  Notifications.js  OrderBook.js  OrderNotifications.js  PaperTrading.js  (+42 more)
solana-dex-frontend/src/contexts/: GlobalStateContext.js  ThemeContext.js
solana-dex-frontend/src/pages/: TokenInfo.js  (+3 more)
tests/: my_dex_project.ts
(+24 files in other folders)
