[package]
name = "my_dex_project"
version = "0.1.0"
edition = "2018"

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
rand = "0.8"
solana-program = "1.18.14"
winnow = "0.6.9"
toml_datetime = "0.6.6"
getrandom = { version = "0.2.15", features = ["custom"] }

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
codegen-units = 1
